<resources>
    <string name="app_name">BasicUnitTesting</string>
    <string name="name_label">Your name:</string>
    <string name="dob_label">Your date of birth:</string>
    <string name="email_label">Your Email address:</string>
    <string name="settings_title">My Settings</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your Email</string>
    <string name="EmptyName">Name should not be empty input.</string>
    <string name="NameOnlyEnglish">Name can be only english language.</string>
    <string name="EmailEmpty">Email should not be empty input.</string>
    <string name="EmailIsWrong">Email format is wrong.</string>
</resources>
